--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,6 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("/../assets/patternpad.svg");
+  // background-image: url("/../assets/patternpad.svg");
+  // background-color: #1d1d1d;
 }
